mainpages/static/styles/main.css
.clearfix::after {
    content: "";
    clear: both;
    display: table;
}
/*
* @Author: sean-dooher
* @Date:   2017-07-29 14:11:10
* @Last Modified by:   sean-dooher
* @Last Modified time: 2018-03-06 15:00:21
*/
html, body, div, span, object, iframe,
h1, h2, h3, h4, h5, h6, p, blockquote, pre,
abbr, address, cite, code,
del, dfn, em, img, ins, kbd, q, samp,
small, strong, sub, sup, var,
b, i,
dl, dt, dd, ol, ul, li,
fieldset, form, label, legend,
table, caption, tbody, tfoot, thead, tr, th, td,
article, aside, canvas, details, figcaption, figure, 
footer, header, hgroup, menu, nav, section, summary,
time, mark, audio, video {
	margin:0;
	padding:0;
	border:0;
	outline:0;
	font-size:100%;
	vertical-align:baseline;
	background:transparent;
	font-family: 'Open Sans', sans-serif;
}

a {
	outline: 0;
	color: inherit;
	text-decoration: none;
}

body {
	overflow-x: hidden;
	background-color: #fefefe;
	color: #444;
}

.clearfix::after {
    content: "";
    clear: both;
    display: table;
}

.noselect {
	-webkit-user-select: none;
	-moz-user-select: none;
	-ms-user-select: none;
	user-select: none;
}

.centered {
	text-align: center;
}

.hidden {
	overflow: hidden;
}

.animated {
	transition: .5s;
}

.group {
	display: inline-block;
}

.button{
    box-shadow: inset 0 1px 0 0 #45D6D6;
    background-color: #2CBBBB;
    border: 1px solid #27A0A0;
    display: inline-block;
    cursor: pointer;
    color: #FFFFFF;
    font-family: 'Open Sans Condensed', sans-serif;
    font-size: 14px;
    padding: 8px 18px;
    text-decoration: none;
    text-transform: uppercase;
    text-align: center;
}

.button:hover, .button:focus {
	outline: none;
    background:linear-gradient(to bottom, #34CACA 5%, #30C9C9 100%);
    background-color:#34CACA;
}

.button[disabled]:hover {
	cursor: initial;
	background: initial;
	background-color: #2CBBBB;
}

.menubar {
	display: none;
}

nav, .menubar {
	width: 100%;
	text-align: center;
	background-color: #111;
	opacity: .8;
	position: fixed;
	top: 0;
	z-index: 1;
}

nav a, .menubar a {
	color: white;
	display: inline-block;
	font-size: 18px;
	padding: 15px 25px;
	margin: 0;
	min-width: 100px;
	transition: all .5s;
}

nav a:hover, .active {
	background-color: #818181;
}

body::after{
    position:absolute; width:0; height:0; overflow:hidden; z-index:-1;
    content:url('../media/profile.jpg') url('../media/profile1.jpg');
}

.banner {
	background-image: url('../media/banner_front.jpg');
	background-size: cover;
	background-position: center;
	overflow: hidden;
	text-align: center;
	padding-top: 60px;
}

#profile-picture {
	background-image: url('../media/profile.jpg');
	background-size: cover;
	width: 300px;
	height: 300px;
	border-radius: 100%;
	border: 2px solid black;
	display: inline-block; 
}
#profile-picture:hover {
	background-image: url('../media/profile1.jpg');
}

.banner h1, .banner h2, .banner h3 {
	color: white;
	font-weight: normal;
	line-height: 120%;
	text-transform: uppercase;
}

.banner h1 {
	font-size: 2.75rem;
}

.banner h2 { 
	font-size: 2rem;
}

.banner h3 {
	font-size: 1.5rem;
}

#main-content {
	width: 1000px;
	margin: 0 auto;
}

section h2 {
	display: inline-block;
	font-size: 24px;
	font-weight: normal;
	border-bottom: 2px solid #b4b4b4;
	padding: 0 10px;
	margin: 10px;
}

section {
	padding: 60px 10px 10px 10px;
	margin: -50px auto 10px auto;
	border-bottom: 1px solid #b4b4b4;
}

.button.large {
	width: 150px;
	margin: 15px;
	font-size: 16px;
}

.project-content {
	display: flex;
	align-items: center;
}

.project-image {
	display: inline-block;
}

.project-image img {
	width: 400px;
	box-shadow: 2px 2px 5px #aaa;
}

.project-info {
	max-width: 550px;
	margin-left: 15px;
	display: inline-block;
	text-align: left;
}

.date {
	width: 80%;
	text-transform: uppercase;
	font-size: 12px;
	color: black;
	border-bottom: 1px solid gray;
	margin-bottom: 5px;
}

.project .button {
	margin: 10px;
	width: 100px;
}

.project hr {
	height: 0;
	width: 50%;
	border-top: 1px solid #b1b1b1;
	margin-bottom: 25px;
}

.project:last-of-type hr {
	display: none;
}

.experience-item ul {
	padding-left: 15px;
}

.experience-item {
	margin-bottom: 10px;
}

.experience-item p {
	margin-bottom: 15px;
}

footer {
	padding-bottom: 10px;
}

footer a {
	font-size: 48px;
	margin: 0 24px;
	display: inline-block;
}

footer p {
	font-size: 10px;
	color: #b1b1b1;
}
form {
    max-width: 500px;
    padding: 30px;
    background: #FFFFFF;
    margin: 0 auto;
    padding-top: 0;
}

form input[type="text"],
form input[type="email"],
form input[type="time"],
form textarea
{
    width: 100%;
    border: none;
    border-bottom: 1px solid #ddd;
    font: 16px 'Open Sans', Arial, Helvetica, sans-serif;
    height: 45px;
    transition: .25s;
    resize:none;
    overflow: hidden;
	box-sizing: border-box;
    -webkit-box-sizing: border-box;
    -moz-box-sizing: border-box;
    display: block;
    padding: 7px 0;
    background: transparent;
    margin-bottom: 10px;
}


.submitted .load-container {
	opacity: 1;
}

.load-container {
	opacity: 0;
	transition: opacity .5s ease-in;
	position: absolute;
	left: 50%;
	transform: translate(-50%, 0);
	z-index: 1;
	background-color: #fcfcfc;
	box-shadow: 2px 2px 2px 2px #aaa;
	padding: 35px;
}

.submitted .loader {
  margin: 0 0 30px 10px;
  border: 2px solid rgba(0, 0, 0, 0.2);
  border-top-color: #5cb85c;
  animation: loader-spin 2s ease infinite;
  animation-delay: .5s;
  display: inline-block;
  position: relative;
  padding: 0;
}

.submitted .loader,
.submitted .loader:after {
  border-radius: 50%;
  width: 8em;
  height: 8em;
}

.load-complete .loader {
  -webkit-animation: none;
  animation: none;
  transition: border 500ms ease-out;
}

.success .loader {
	border-color: #5cb85c;
}

.fail .loader {
	border-color: #ff0033;
}

.checkmark {
  display: none;
}

.load-complete .checkmark {
	display: initial;
}
.success .checkmark.draw:after {
  animation-duration: 800ms;
  animation-timing-function: ease;
  animation-name: checkmark;
  transform: scaleX(-1) rotate(135deg);
}
.success .checkmark:after {
  opacity: 1;
  height: 4em;
  width: 2em;
  transform-origin: left top;
  border-right: 2px solid #5cb85c;
  border-top: 2px solid #5cb85c;
  content: '';
  left: 2em;
  top: 4em;
  position: absolute;
  z-index: 1;
}

.fail .checkmark:after {
	content: '×';
	font-weight: 300;
	color: #ff0033;
	position: absolute;
	top: 50%;
	right: 50%;
	line-height: 0;
	transform: translate(50%, 50%) scale(8, 8);
}

@keyframes loader-spin {
  0% {
    transform: rotate(0deg);
  }
  100% {
    transform: rotate(360deg);
  }
}

@keyframes checkmark {
  0% {
    height: 0;
    width: 0;
    opacity: 1;
  }
  20% {
    height: 0;
    width: 2em;
    opacity: 1;
  }
  40% {
    height: 4em;
    width: 2em;
    opacity: 1;
  }
  100% {
    height: 4em;
    width: 2em;
    opacity: 1;
  }
}


@media screen and (max-width: 850px) {
	nav {
		height: 100vh;
		width: 0;
		right: 0;
		opacity: 1;
		padding-top: 75px;
	}

	.menubar {
		display: initial;
		opacity: 1;
		text-align: right;
	}

	section, #main-content {
		width: 80%;
		min-width: 300px;
	}

	section {
		padding-left: 0;
		padding-right: 0;
	}

	nav a, nav a:hover, .active, .menubar a {
		display: block;
		background-color: inherit;
	}

	.menubar a:hover, nav a:hover, .active {
		color: #818181;
	}

	.sidebar {
		width: 100%;
	}

	.g-recaptcha {
		transform:scale(0.85);
		-webkit-transform:scale(0.85);
		transform-origin:0 0;
		-webkit-transform-origin:0 0;
	}
}

